# r-tree

./: .gitignore  CMakeLists.txt  README.md
include/rtree/: bounding_box.h  exception.h  iterator.hpp  node.hpp  rtree.hpp  settings.h  split.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  exponential_split_tests.cpp  linear_split_tests.cpp  main.cpp  quadratic_split_tests.cpp  test.cpp  tree_operations_tests.cpp
